# diploma

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/pdf_ocr_ui/: __init__.py  app.py  settings.py  types.py
src/pdf_ocr_ui/services/: __init__.py  article_service.py  ocr_service.py  orthography_service.py  pdf_service.py  pre_reform_translation_service.py
